--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.3"
+  },
+  "scripts": {
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
